Main page, Movement section

--- a/quickref.html
+++ b/quickref.html
@@ -19,11 +19,11 @@
         <!-- Movement section -->
         <div id="section-movement" class="section-container">
             <div class="section-title">
-                Movement <span class="float-right">limited by movement speed</span>
+                Movimento <span class="float-right">limitato dalla velocità di movimento</span>
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    You can move at any time during your turn (before, after, or during actions).
+                    Puoi muoverti in qualsiasi fase del tuo turno (prima, dopo, o durante un'azione).
                 </div>
                 <div class="section-row" id="basic-movement">
                 </div>
@@ -33,12 +33,11 @@
         <!-- Action section -->
         <div id="section-action" class="section-container">
             <div class="section-title">
-                Action <span class="float-right">1/turn</span>
+                Azioni <span class="float-right">1/turno</span>
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    You can also interact with one object or feature of the
-                    environment for free.
+                    Puoi interagire con un oggetto o un elemento dell'ambiente gratuitamente, durante il tuo movimento o la tua azione
                 </div>
                 <div class="section-row" id="basic-actions"></div>
             </div>
@@ -47,12 +46,13 @@
         <!-- Bonus action section -->
         <div id="section-bonus-action" class="section-container">
             <div class="section-title">
-                Bonus action <span class="float-right">max. 1/turn</span>
+                Azioni bonus <span class="float-right">max. 1/turno</span>
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    You can take a bonus action only when a special ability, spell, or feature
-                    states that you can do something as a bonus action.
+                    Puoi effettuare un'azione bonus soltanto quando una capacità
+                    speciale, un incantesimo o un altro privilegio del gioco
+                    ti permettono di fare qualcosa come azione bonus.
                 </div>
                 <div class="section-row" id="basic-bonus-actions"></div>
             </div>
@@ -61,12 +61,13 @@
         <!-- Reaction section -->
         <div id="section-reaction" class="section-container">
             <div class="section-title">
-                Reaction <span class="float-right">max. 1/round</span>
+                Reazioni <span class="float-right">max. 1/round</span>
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    A reaction is an instant response to a trigger of some kind, which
-                    can occur on your turn or on someone else's.
+                    Una reazione è una risposta istantanea a un
+                    innesco di qualche tipo, che può verificarsi nel turno del
+                    personaggio o nel turno di qualcun altro.
                 </div>
                 <div class="section-row" id="basic-reactions"></div>
             </div>
@@ -75,36 +76,36 @@
         <!-- Condition section -->
         <div id="section-condition" class="section-container">
             <div class="section-title">
-                Condition
+                Condizioni
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    Conditions alter your capabilities in a variety of ways, and can arise as a result of a spell, a class feature, a monster's attack, or other effect.
+                    Le condizioni alterano le capacità di una creatura in molti modi e possono essere provocate da un incantesimo, un privilegio di classe, un attacco di un mostro o da altri effetti.
                 </div>
                 <div class="section-row" id="basic-conditions"></div>
             </div>
         </div>
-        
+
         <!-- Environmental section -->
         <div id="section-environment" class="section-container">
             <div class="section-title">
-                Environmental Effects
+                Effetti Ambientali
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    Effects that obscure vision can prove a significant hindrance to most adventuring tasks.
+                    L'oscurità e gli altri effetti che oscurano la visione possono costituire un serio ostacolo.
                 </div>
                 <div class="section-row" id="environment-obscurance"></div>
                 <div class="section-row section-subtitle text fontsize">
-                    The presence or absence of light in an environment creates three categories of illumination.
+                    La presenza o l'assenza di luce in un ambiente può creare tre categorie di illuminazione: luce intensa, luce fioca e oscurità.
                 </div>
                 <div class="section-row" id="environment-light"></div>
                 <div class="section-row section-subtitle text fontsize">
-                    Some creatures have extraordinary senses that allow them to perceive their environment.
+                    Alcune creature hanno sensi straordinari che gli consentono di percepire l'ambiente intorno a loro.
                 </div>
                 <div class="section-row" id="environment-vision"></div>
                 <div class="section-row section-subtitle text fontsize">
-                    Obstacles can provide cover during combat, making a target more difficult to harm.
+                    Gli ostacoli possono fornire copertura durante il combattimento, rendendo un obiettivo più difficile da colpire.
                 </div>
                 <div class="section-row" id="environment-cover"></div>
             </div>
@@ -118,11 +119,11 @@
         <div class="modal-dialog modalsize">
             <div class="section-container modal-container" id="modal-container">
                 <div class="section-title" id="modal-title">
-                    Modal title<span class="float-right">Action</span>
+                    Titolo modale<span class="float-right">Azione</span>
                 </div>
                 <div class="section-content">
                     <div class="section-row section-subtitle text" id="modal-subtitle">
-                        Subtitle
+                        Sottotitolo
                     </div>
                     <div class="section-row text">
                         <div id="modal-bullets">
